revamped login page

--- a/app/views/app/layout.scala.html
+++ b/app/views/app/layout.scala.html
@@ -27,7 +27,7 @@
 
 
     </head>
-    <body background="@routes.Assets.at("images/texture/cartographer.png")">
+    <body background="@routes.Assets.at("images/texture/gridme.png")">
 
             @content
 
