--- a/app/assets/stylesheets/app.less
+++ b/app/assets/stylesheets/app.less
@@ -18,47 +18,16 @@
 @text-main:@clouds;
 
 
-@panel-background:@belize-hole;
+@panel-background:@peter-river;
 @header-background:@peter-river;
 
 @border-width:1px;
 @border-color:@midnight-blue;
 
 
-.preserve-whitespace{
-    white-space: pre-wrap !important;
-    word-wrap: break-word !important;
-}
-
-
-.editable-input {
-    rows : 15 !important;
-}
-
-a.editable-click {
-    color: @text-main !important;
-    border-bottom: none !important;
-}
-a.editable-click:hover {
-    color: @text-highlight !important;
-}
-
-
-input[type="text"], textarea {
-  background-color : @clouds !important;
-}
-
-input[type=submit] {
-  background-color : @clouds !important;
-}
-
 
 .panel {
     border-color:@midnight-blue !important;
-}
-
-.img-rounded{
-     border:1px solid @midnight-blue;
 }
 
 
@@ -71,6 +40,8 @@ input[type=submit] {
 .panel {
     background-color:@panel-background !important;
     color:@text-main !important;
+    padding-right:3%;
+    padding-left:3%;
 }
 
 
@@ -92,22 +63,15 @@ input[type=submit] {
     color:@text-main !important;
 }
 
-
-
-
-
 .navbar-brand{
-                 background-color:@header-background !important;
-                 border-color:@midnight-blue !important;
-                 color:@text-main !important;
+     background-color:@header-background !important;
+     border-color:@midnight-blue !important;
+     color:@text-main !important;
 }
-
-.quotes {
-    color:@concrete;
-}
-
 
 .form-control{
+     border-color:@midnight-blue !important;
      width: 100% !important;
      horizontal-align: 0 auto !important;
 }
+
