--- a/app/views/app/login.scala.html
+++ b/app/views/app/login.scala.html
@@ -18,8 +18,9 @@
 <div class="row">
 
     <div class="col-lg-6 col-md-6 col-sm-6">
+        <div class="panel">
 
-        LOGIN
+        <h3>Sign In</h3>
         <form class="form-horizontal" role="form" action="login" method="post">
             <div class="form-group">
                 <label for="username_login" class="col-sm-2 control-label">Username</label>
@@ -41,7 +42,7 @@
         </form>
 
 
-        REGISTER
+        <h3>Register</h3>
         <form class="form-horizontal" role="form" action="register" method="post">
             <div class="form-group">
                 <label for="username_login" class="col-sm-2 control-label">Username</label>
@@ -58,10 +59,10 @@
             <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
                     <button type="submit" class="btn btn-default">Register</button>
-                    <button type="submit" class="btn btn-default">Register</button>
                 </div>
             </div>
         </form>
+        </div>
 
     </div>
 </div>
