--- a/app/views/app/index.scala.html
+++ b/app/views/app/index.scala.html
@@ -7,8 +7,8 @@ ng-init="init('@user_id', '@username')">
     <nav id="main-navbar" class="navbar navbar-default navbar-fixed-top" role="navigation">
         <ul class="nav navbar-nav">
             <li><a href="logout"><i class="fa fa-power-off fa-6"></i></a></li>
-            <li><a href="#">My Feed</a></li>
-            <li><a href="#">Global Feed</a></li>
+            <li><a href="#" ng-click="feed = 'my_feed';fetch_my_feed(0)">My Feed</a></li>
+            <li><a href="#" ng-click="feed = 'global_feed'; fetch_global_feed(0)">Global Feed</a></li>
         </ul>
     </nav>
 
@@ -27,7 +27,7 @@ ng-init="init('@user_id', '@username')">
 
     <br>
 
-    <div class="panel panel-tweet" ng-repeat="message in message_list() | orderBy:'-timestamp'">
+    <div class="panel panel-tweet" ng-repeat="message in get_messages(feed) | orderBy:'-timestamp'">
         <h4>{{ users[message.user_id] }}</h4>
         <div class="panel-body">
         {{ message.body }}
