--- a/app/views/app/login.scala.html
+++ b/app/views/app/login.scala.html
@@ -25,13 +25,13 @@
             <div class="form-group">
                 <label for="username_login" class="col-sm-2 control-label">Username</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="username_login" placeholder="Username"  name="username">
+                    <input type="text" class="form-control" id="username_login" placeholder="Username"  name="username" pattern=".[0-9a-zA-Z]{5,15}" title="Username must be between 5 and 15 alphanumeric characters" required>
                 </div>
             </div>
             <div class="form-group">
                 <label for="password_login" class="col-sm-2 control-label">Password</label>
                 <div class="col-sm-10">
-                    <input type="password" class="form-control" id="password_login" placeholder="Password"  name="password">
+                    <input type="password" class="form-control" id="password_login" placeholder="Password"  name="password" pattern=".{5,15}"  title="Password must be between 5 and 15 characters" required>
                 </div>
             </div>
             <div class="form-group">
@@ -47,13 +47,13 @@
             <div class="form-group">
                 <label for="username_login" class="col-sm-2 control-label">Username</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="username_login" placeholder="Username"  name="username">
+                    <input type="text" class="form-control" id="username_login" placeholder="Username"  name="username"  pattern=".[0-9a-zA-Z]{5,15}"  title="Username must be between 5 and 15 alphanumeric characters"  required>
                 </div>
             </div>
             <div class="form-group">
                 <label for="password_login" class="col-sm-2 control-label">Password</label>
                 <div class="col-sm-10">
-                    <input type="password" class="form-control" id="password_login" placeholder="Password" name="password">
+                    <input type="password" class="form-control" id="password_login" placeholder="Password" name="password" pattern=".{5,15}" title="Password must be between 5 and 15 characters" required>
                 </div>
             </div>
             <div class="form-group">
