--- a/app/views/app/login.scala.html
+++ b/app/views/app/login.scala.html
@@ -25,7 +25,7 @@
             <div class="form-group">
                 <label for="username_login" class="col-sm-2 control-label">Username</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="username_login" placeholder="Username"  name="username" pattern=".[0-9a-zA-Z]{5,15}" title="Username must be between 5 and 15 alphanumeric characters" required>
+                    <input type="text" class="form-control" id="username_login" placeholder="Username"  name="username" pattern="[0-9a-zA-Z]{5,15}" title="Username must be between 5 and 15 alphanumeric characters" required>
                 </div>
             </div>
             <div class="form-group">
@@ -47,7 +47,7 @@
             <div class="form-group">
                 <label for="username_login" class="col-sm-2 control-label">Username</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" id="username_login" placeholder="Username"  name="username"  pattern=".[0-9a-zA-Z]{5,15}"  title="Username must be between 5 and 15 alphanumeric characters"  required>
+                    <input type="text" class="form-control" id="username_login" placeholder="Username"  name="username"  pattern="[0-9a-zA-Z]{5,15}"  title="Username must be between 5 and 15 alphanumeric characters"  required>
                 </div>
             </div>
             <div class="form-group">
