--- a/app/views/app/index.scala.html
+++ b/app/views/app/index.scala.html
@@ -5,7 +5,7 @@
 ng-init="init('@user_id', '@username')">
 
     <nav id="main-navbar" class="navbar navbar-default navbar-fixed-top" role="navigation">
-        <a class="navbar-brand" href="#">{{users[current_user].username}}</a>
+        <a class="navbar-brand">{{users[current_user].username}}</a>
 
         <ul class="nav navbar-nav">
             <li><a href="#" ng-click="feed = 'my_feed';fetch_my_feed(0)">My Feed</a></li>
