holy comments, batman!

--- a/app/views/app/landing.scala.html
+++ b/app/views/app/landing.scala.html
@@ -17,7 +17,7 @@
 
 
 
-        <!-- todo: these errors are super user unfriendly, reveal system internals (although nothing not visible by viewing angularjs state)-->
+        <!-- todo: error display could be much more polished -->
         @for(e <- error) {
             <div class="alert alert-danger">
                 @error
